    - negmod(a, n)                    -a mod n
    - submod(a, b, n)                 a - b mod n
    - muladdmod(a, b, c, n)           a * b + c mod n
    - mulsubmod(a, b, c, n)           a * b - c mod n
    - rootmod(a, k, n)                modular k-th root
    - allrootmod(a,k,n)               all k-th roots of a (mod n)
    - cornacchia(d,n)                 find x,y for x^2 + d * y^2 = n
    - vecequal(\@a, \@b)              compare two arrays for equality
    - tozeckendorf(n)                 Zeckendorf binary string from n
    - fromzeckendorf(str)             n from Zeckendorf binary string
    - lucasu(p,q,k)                   U(p,q)_k
    - lucasv(p,q,k)                   V(p,q)_k
    - lucasuv(p,q,k)                  U(p,q)_k, V(p,q)_k
    - lucasumod(p,q,k,n)              U(p,q)_k mod n
    - lucasvmod(p,q,k,n)              V(p,q)_k mod n
    - lucasuvmod(p,q,k,n)             (U(p,q)_k mod n, V(p,q)_k mod n)
    - pisano_period(n)                period of modular Fibonacci sequence
    - prime_powers([start,] end)      array ref of prime powers
    - next_prime_power(n)             next prime power: p > n
    - prev_prime_power(n)             previous prime power: p < n
    - prime_power_count([start,] end) count of prime powers
    - prime_power_count_approx(n)     fast approximate prime power count
    - prime_power_count_lower(n)      fast prime power count lower bound
    - prime_power_count_upper(n)      fast prime power count upper bound
    - nth_prime_power(n)              the nth prime power
    - nth_prime_power_approx(n)       fast approximate nth prime power
    - nth_prime_power_lower(n)        fast nth prime power lower bound
    - nth_prime_power_upper(n)        fast nth prime power upper bound
    - next_perfect_power(n)           next perfect power: p > n
    - prev_perfect_power(n)           previous perfect power: p < n
    - perfect_power_count([beg,] end) count of perfect powers