@@ -147,6 +147,7 @@ sub mpu_public_regex {
       calkin_wilf_n stern_brocot_n
       nth_calkin_wilf nth_stern_brocot
       nth_stern_diatomic
+      farey
       ExponentialIntegral LogarithmicIntegral RiemannZeta RiemannR LambertW Pi
       irand irand64 drand urandomb urandomm csrand random_bytes entropy_bytes
   );
