@@ -106,6 +106,8 @@ UV* range_totient(UV lo, UV hi) {
 
 #define HAVE_SUMTOTIENT_128 (BITS_PER_WORD == 64 && HAVE_UINT128)
 #define MAX_TOTSUM ( (BITS_PER_WORD == 64) ? UVCONST(7790208950) : 118868 )
+/* sumtotient(7790208950) = 2^64 - 1664739356 */
+/* sumtotient(7790208951) = 2^64 + 2584983748 */
 
 typedef struct {
   UV    hsize;
